import "DocumentId.proto";

package Diadoc.Api.Proto;

message CustomPrintFormDetectionRequest
{
    repeated DocumentId DocumentIds = 1;
}

message CustomPrintFormDetectionResult
{
    repeated CustomPrintFormDetectionItemResult Items = 1;
}

message CustomPrintFormDetectionItemResult
{
    required DocumentId DocumentId = 1;
    required bool HasCustomPrintForm = 2;
}

